# dNotes

./: .gitignore  Cargo.toml  GtkNotes.cmb  PKGBUILD  QtNotes.pro.qtds  README.md  dev.doodles.dnotes.settings.gschema.xml  dev.doodles.gtknotes.json  gtknotes-window.ui  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  meson.build
.github/workflows/: release.yml
data/: dev.doodles.gtknotes.appdata.xml.in  dev.doodles.gtknotes.desktop.in  dev.doodles.gtknotes.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: GtkNotes.cmb  gtknotes-application.c  gtknotes-application.h  gtknotes-window.c  gtknotes-window.h  gtknotes-window.ui  gtknotes.gresource.xml  main.c  main.rs  meson.build
src/file_item/: mod.rs
