[package]
name = "dnotes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.4.8", package = "gtk4", features = ["v4_8"] }
relm4 = "0.4"
relm4-macros = "0.4"
relm4-components = "0.4"
